# rust-session-based-auth

./: .gitignore  Cargo.toml  README.adoc
examples/: actix_web_session_based_auth_advanced_middlware.rs  actix_web_session_based_auth_with_middleware.rs  actix_web_sessoin_based_auth.rs  minimal_session_based_auth.rs
src/: main.rs
tests/: check_status_alice.sh  check_status_bob.sh  login_alice.sh  login_bob.sh  logout_alice.sh  logout_bob.sh
