[package]
name = "session_based_authentication_example"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-identity = "0.9.0"
actix-session = { version ="0.11.0", features = ["cookie-session"] }
actix-web = "4.11.0"
env_logger = "0.11.8"
log = "0.4.28"
serde = "1.0.226"
uuid = { version = "1.18.1", features = ["v4"] }

[[example]]
name = "minimal-session-auth-example"
path = "examples/minimal_session_based_auth.rs"

[[example]]
name = "actix-session-auth-example" 
path = "examples/actix_web_sessoin_based_auth.rs"
